# s2025

./: .claudeignore  .gitignore  3d_2d.py  CLAUDE.md  README.md  cbct_ct_compare.ipynb  ct_shapes.csv  dataset.py  dataset_2_5d.py  dataset_2d.py  dataset_experiments.ipynb  dd.txt  evaluate.py  find_best_fid.py  inference.py  inference_2D.py  inference_patch.py  main.py  packagelist.txt  preprocessing.py  pyproject.toml  requirements.txt  slice_test.py  temp.py  test_vqgan_2.5d.py  train_vdm_uvit_2.5d.py  train_vdm_uvit_2d.py  train_vqgan.py  train_vqgan_2.5d.py  train_vqgan_2d.py  vis.py  vqgan_2.5D.sh
configs/: 2.5D_cbct_ae_config.yaml  2.5D_ct_ae_config.yaml  2.5D_diffusion_config.yaml  2.5D_inference.yaml  2.5D_inference_copy.yaml  ae_config.yaml  diffusion_config.yaml
configs/baseline/: 2_5d.yaml  2d.yaml  ae_cbct.yaml  ae_ct.yaml
configs/comp_abl/: ae_ratio2_cbct.yaml  ae_ratio2_ct.yaml  ae_ratio8_cbct.yaml  ae_ratio8_ct.yaml  ratio2.yaml  ratio4.yaml  ratio8.yaml
configs/comparison/: unet.yaml
configs/region/: abdomen.yaml  head_neck.yaml  thorax.yaml
configs/slice_abl/: n3.yaml  n5.yaml  n7.yaml  n9.yaml
lib/: base_trainer.py  experiment.py  vqvae_utils.py
models/lvdm/: unet_denoiser.py  utils.py  uvit_2d.py  vdm.py  vdm_2_5d.py  vdm_2d.py
scripts/: run_vqvae_ablation.sh
tools/: count_params.py  hu_analysis.py  stat_test.py
